--- a/index.html
+++ b/index.html
@@ -110,7 +110,17 @@ urchinTracker();
 
 <ul>
 <li> <font color="red"><b>New</b></font> 
-	<a>[2020.07]</a> 
+	<a>[2021.04]</a> 
+	The paper "Designing Approximate and Deployable SRPT Scheduler: A Unified Framework" is accepted by IEEE/ACM IWQoS 2021.
+	</li>
+<li> <font color="red"><b>New</b></font> 
+	<a>[2020.12]</a> 
+	The paper "Taming Time-Varying Information Asymmetry in Fresh Status Acquisition" is accepted by IEEE INFOCOM 2021 (acceptance rate: 19.9%).
+	</li>
+<li> <a>[2020.09]</a> 
+	The paper "Monetizing Edge Service in Mobile Internet Ecosystem" is accepted by IEEE Transactions on Mobile Computing (TMC).
+	</li>
+<li> <a>[2020.07]</a> 
 	The paper "Location-Flexible Mobile Data Service in Overseas Market" is accepted by IEEE Transactions on Mobile Computing (TMC).
 	</li>
 <li> <a>[2019.12]</a> 
