--- a/publications.html
+++ b/publications.html
@@ -5,7 +5,7 @@
 
 <link rel="stylesheet" href="./file/jemdoc.css" type="text/css">
 <link rel="stylesheet" href="./file/wang.css" type="text/css">
-<title><b>Zhiyuan Wang</b>'s Homepage</title>
+<title>Zhiyuan Wang's Homepage</title>
 </head>
 <body>
 <script src="./file/urchin.js.下载" type="text/javascript">
