--- a/index.html
+++ b/index.html
@@ -110,12 +110,15 @@ urchinTracker();
 
 <ul>
 <li> <font color="red"><b>New</b></font> 
+	<a>[2021.05]</a> 
+	The paper "An Online Mean Field Approach for Hybrid Edge Server Provision" is accepted by ACM MobiHoc 2021.
+	</li>
+<li> <font color="red"><b>New</b></font> 
 	<a>[2021.04]</a> 
 	The paper "Designing Approximate and Deployable SRPT Scheduler: A Unified Framework" is accepted by IEEE/ACM IWQoS 2021.
 	</li>
-<li> <font color="red"><b>New</b></font> 
-	<a>[2020.12]</a> 
-	The paper "Taming Time-Varying Information Asymmetry in Fresh Status Acquisition" is accepted by IEEE INFOCOM 2021 (acceptance rate: 19.9%).
+<li> <a>[2020.12]</a> 
+	The paper "Taming Time-Varying Information Asymmetry in Fresh Status Acquisition" is accepted by IEEE INFOCOM 2021.
 	</li>
 <li> <a>[2020.09]</a> 
 	The paper "Monetizing Edge Service in Mobile Internet Ecosystem" is accepted by IEEE Transactions on Mobile Computing (TMC).
