--- a/publications.html
+++ b/publications.html
@@ -40,7 +40,13 @@ urchinTracker();
 <h2>Conference</h2>
 <p>
 	<ol>				
-	
+	<li class="list-paper">
+		An Online Mean Field Approach for Hybrid Edge Server Provision<br>
+		<b>Zhiyuan Wang</b>, Jiancheng Ye, and John C.S. Lui<br>		
+		ACM International Symposium on Mobile Ad Hoc Networking and Computing (MobiHoc), Online Conference, July 2021 <br>
+		(<font color="blue">Acceptance rate: 20.1%</font>, <font color="red">CCF B</font>)
+		</li>
+		
 	<li class="list-paper">
 		Designing Approximate and Deployable SRPT Scheduler: A Unified Framework<br>
 		<b>Zhiyuan Wang</b>, Jiancheng Ye, Dong Lin, Yipei Chen, and John C.S. Lui<br>		
@@ -89,7 +95,7 @@ urchinTracker();
 		<b>Zhiyuan Wang</b>, Lin Gao, and Jianwei Huang<br>
 		ACM Workshop on the Economics of Networks, Systems and Computation (NetEcon),
 		MIT, Cambridge, MA, USA, June 2017<br>
-		(in conjunction with ACM EC)
+		(in conjunction with ACM EC 2017)
 		</li>
 								
 	<li class="list-paper">
