--- a/publications.html
+++ b/publications.html
@@ -37,34 +37,34 @@ urchinTracker();
 
 
 
-<h2>Conference</h2>
+<h2>Conference Papers</h2>
 <p>
 	<ol>				
 	<li class="list-paper">
 		An Online Mean Field Approach for Hybrid Edge Server Provision<br>
 		<b>Zhiyuan Wang</b>, Jiancheng Ye, and John C.S. Lui<br>		
-		ACM International Symposium on Mobile Ad Hoc Networking and Computing (MobiHoc), Online Conference, July 2021 <br>
+		ACM International Symposium on Mobile Ad Hoc Networking and Computing (MobiHoc), Online, July 2021 <br>
 		(<font color="blue">Acceptance rate: 20.1%</font>, <font color="red">CCF B</font>)
 		</li>
 		
 	<li class="list-paper">
 		Designing Approximate and Deployable SRPT Scheduler: A Unified Framework<br>
 		<b>Zhiyuan Wang</b>, Jiancheng Ye, Dong Lin, Yipei Chen, and John C.S. Lui<br>		
-		IEEE/ACM International Symposium on Quality of Service (IWQoS), Short Paper, Online Conference, June 2021 <br>
+		IEEE/ACM International Symposium on Quality of Service (IWQoS), Short Paper, Online, June 2021 <br>
 		(<font color="red">CCF B</font>)
 		</li>
 	
 	<li class="list-paper">
 		Taming Time-Varying Information Asymmetry in Fresh Status Acquisition <br>
 		<b>Zhiyuan Wang</b>, Lin Gao, and Jianwei Huang<br>		
-		IEEE International Conference on Computer Communications (INFOCOM),	Online Conference, May 2021 <br>
+		IEEE International Conference on Computer Communications (INFOCOM),	Online, May 2021 <br>
 		(<font color="blue">Acceptance rate: 19.9%</font>, <font color="red">CCF A</font>)
 		</li>
 		
 	<li class="list-paper">
 		<a href="https://ieeexplore.ieee.org/document/9155405">Travel with Your Mobile Data Plan: A Location-Flexible Data Service</a>	<br>
 		<b>Zhiyuan Wang</b>, Lin Gao, and Jianwei Huang<br>		
-		IEEE International Conference on Computer Communications (INFOCOM),	Online Conference, April 2020 <br>
+		IEEE International Conference on Computer Communications (INFOCOM),	Online, April 2020 <br>
 		(<font color="blue">Acceptance rate: 19.8%</font>, <font color="red">CCF A</font>)
 		</li>
 		
@@ -113,7 +113,7 @@ urchinTracker();
 
 
 
-<h2>Journal</h2>
+<h2>Journal Papers</h2>
 <p>
 	<ol>
 	<li class="list-paper">
