--- a/publications.html
+++ b/publications.html
@@ -40,7 +40,7 @@ urchinTracker();
 <p>
 	<ol>				
 	<li class="list-paper">
-		An Online Mean Field Approach for Hybrid Edge Server Provision<br>
+		<a href="https://dl.acm.org/doi/10.1145/3466772.3467042">An Online Mean Field Approach for Hybrid Edge Server Provision</a><br>
 		<b>Zhiyuan Wang</b>, Jiancheng Ye, and John C.S. Lui<br>		
 		ACM International Symposium on Mobile Ad Hoc Networking and Computing (MobiHoc), Online, July 2021 <br>
 		(<font color="blue">Acceptance rate: 20.1%</font>, <font color="red">CCF B</font>)
@@ -54,7 +54,7 @@ urchinTracker();
 		</li>
 	
 	<li class="list-paper">
-		Taming Time-Varying Information Asymmetry in Fresh Status Acquisition <br>
+		<a href="https://ieeexplore.ieee.org/document/9488884">Taming Time-Varying Information Asymmetry in Fresh Status Acquisition</a> <br>
 		<b>Zhiyuan Wang</b>, Lin Gao, and Jianwei Huang<br>		
 		IEEE International Conference on Computer Communications (INFOCOM),	Online, May 2021 <br>
 		(<font color="blue">Acceptance rate: 19.9%</font>, <font color="red">CCF A</font>)
