--- a/publications.html
+++ b/publications.html
@@ -40,14 +40,16 @@ urchinTracker();
 <p>
 	<ol>				
 	<li class="list-paper">
-		<a href="https://dl.acm.org/doi/10.1145/3466772.3467042">An Online Mean Field Approach for Hybrid Edge Server Provision</a><br>
+		<a href="https://dl.acm.org/doi/10.1145/3466772.3467042">
+		An Online Mean Field Approach for Hybrid Edge Server Provision</a><br>
 		<b>Zhiyuan Wang</b>, Jiancheng Ye, and John C.S. Lui<br>		
 		ACM International Symposium on Mobile Ad Hoc Networking and Computing (MobiHoc), Online, July 2021 <br>
 		(<font color="blue">Acceptance rate: 20.1%</font>, <font color="red">CCF B</font>)
 		</li>
 		
 	<li class="list-paper">
-		Designing Approximate and Deployable SRPT Scheduler: A Unified Framework<br>
+		<a href="https://ieeexplore.ieee.org/document/9521259">
+		Designing Approximate and Deployable SRPT Scheduler: A Unified Framework</a><br>
 		<b>Zhiyuan Wang</b>, Jiancheng Ye, Dong Lin, Yipei Chen, and John C.S. Lui<br>		
 		IEEE/ACM International Symposium on Quality of Service (IWQoS), Short Paper, Online, June 2021 <br>
 		(<font color="red">CCF B</font>)
