--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@ urchinTracker();
 <div id="toptitle">
 	<h1>Zhiyuan Wang (王志远)</h1>
 	<br />
-	<p>I am currently Post-Doctoral Fellow in <a href="http://www.ie.cuhk.edu.hk/main/index.shtml">CUHK</a>, 
+	<p>I am currently an associate professor in Beihang University.<br>
+		I was a Post-Doctoral Fellow in <a href="http://www.ie.cuhk.edu.hk/main/index.shtml">CUHK</a>, 
 		advised by Prof. <a href="http://www.cse.cuhk.edu.hk/~cslui/">John C.S. Lui</a>.<br>
 		I received  Ph.D. degree from <a href="http://www.ie.cuhk.edu.hk/main/index.shtml">CUHK</a>, 
 		advised by Prof. <a href="http://jianwei.ie.cuhk.edu.hk/">Jianwei Huang</a>.
@@ -42,7 +43,11 @@ urchinTracker();
 	<br/>
 	<td align="left">
 			<p>
-			<b>Post-Doctoral Fellow</b> (2019/10~Present)	<br>
+			<b>Associate Professor</b> (2021/10~Present)	<br>
+			School of Computer Science & Engineering<br>
+			Beihang University, Beijing<br><br>
+			
+			<b>Post-Doctoral Fellow</b> (2019/10~2021/10)	<br>
 			Computer Science & Engineering<br>
 			CUHK, Hong Kong<br><br>
 			
@@ -64,8 +69,6 @@ urchinTracker();
 			</b>
 			</p>
 	</td>
-	<td> </td>	<td> </td>
-	<td> </td>	<td> </td>
 	<td> </td>	<td> </td>
 	<td> </td>	<td> </td>
 	<td> </td>	<td> </td>
@@ -98,9 +101,8 @@ urchinTracker();
 
 <h2>Contact</h2>
 	<p>
-	SHB 910, CUHK, Shatin, Hong Kong<br>
-	Tel: (852) 6632 6316<br>
-	<a href="mailto:zhiyuanwang@cuhk.edu.hk</">zhiyuanwang@cuhk.edu.hk</a><br>
+	New Main Building G830, Beihang University  <br>
+	zhiyuanwang at buaa dot edu dot cn<br>
 	<a href="http://wang-zhi-yuan.github.io">http://wang-zhi-yuan.github.io</a></p>
 
 
