--- a/publications.html
+++ b/publications.html
@@ -42,7 +42,7 @@ urchinTracker();
 <p>
 	<ol>
 	<li class="list-paper">
-		Approximate and Deployable Shortest Remaining Processing Time Scheduler<br>
+		<a href="https://ieeexplore.ieee.org/document/9686361">Approximate and Deployable Shortest Remaining Processing Time Scheduler</a> <br>
 		<b>Zhiyuan Wang</b>, Jiancheng Ye*, Dong Lin, Yipei Chen, and John C.S. Lui,	<br>
 		to appear in IEEE/ACM Transactions on Networking (ToN), 2021<br>
 		(<font color="red">CCF A</font>)
