--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ urchinTracker();
 		I was a Post-Doctoral Fellow in <a href="http://www.ie.cuhk.edu.hk/main/index.shtml">CUHK</a>, 
 		advised by Prof. <a href="http://www.cse.cuhk.edu.hk/~cslui/">John C.S. Lui</a>.<br>
 		I received  Ph.D. degree from <a href="http://www.ie.cuhk.edu.hk/main/index.shtml">CUHK</a>, 
-		advised by Prof. <a href="http://jianwei.ie.cuhk.edu.hk/">Jianwei Huang</a>.
+		advised by Prof. <a href="https://jianwei.cuhk.edu.cn">Jianwei Huang</a>.
 	</p>
 </div>
 
