--- a/publications.html
+++ b/publications.html
@@ -47,20 +47,22 @@ urchinTracker();
 		to appear in IEEE/ACM Transactions on Networking (ToN), 2021<br>
 		(<font color="red">CCF A</font>)
 		</li>
+
+	<li class="list-paper">
+		<a href="https://ieeexplore.ieee.org/document/9201367">Monetizing Edge Service in Mobile Internet Ecosystem</a> <br>
+		<b>Zhiyuan Wang</b><sup>&dagger;</sup>, Lin Gao<sup>&dagger;</sup>, Tong Wang*, and Jingjing Luo,<br>
+		IEEE Transactions on Mobile Computing (TMC), vol. 21, no. 5, pp. 1751-1765, May, 2022<br>
+		(<font color="red">CCF A</font>)
+		</li>
 		
 	<li class="list-paper">
 		<a href="https://ieeexplore.ieee.org/document/9161283">Location-Flexible Mobile Data Service in Overseas Market</a> <br>
 		<b>Zhiyuan Wang</b>, Lin Gao, and Jianwei Huang*,	<br>
-		to appear in IEEE Transactions on Mobile Computing (TMC), 2020<br>
+		IEEE Transactions on Mobile Computing (TMC), vol. 21, no. 2, pp. 629-643, February, 2022<br>
 		(<font color="red">CCF A</font>)
 		</li>
 	
-	<li class="list-paper">
-		<a href="https://ieeexplore.ieee.org/document/9201367">Monetizing Edge Service in Mobile Internet Ecosystem</a> <br>
-		<b>Zhiyuan Wang</b><sup>&dagger;</sup>, Lin Gao<sup>&dagger;</sup>, Tong Wang*, and Jingjing Luo,<br>
-		to appear in IEEE Transactions on Mobile Computing (TMC), 2020<br>
-		(<font color="red">CCF A</font>)
-		</li>
+
 		
 	<li class="list-paper">
 		<a href="https://ieeexplore.ieee.org/abstract/document/8930821">Toward Flexible Wireless Data Services</a> <br>
@@ -101,7 +103,8 @@ urchinTracker();
 	<ol>
 
 	<li class="list-paper">
-		Socially-Optimal Mechanism Design for Incentivized Online Learning <br>
+		<a href="https://arxiv.org/abs/2112.14338">
+		Socially-Optimal Mechanism Design for Incentivized Online Learning </a><br>
 		<b>Zhiyuan Wang</b>, Lin Gao, and Jianwei Huang<br>		
 		IEEE International Conference on Computer Communications (INFOCOM),	Online, May 2022 <br>
 		(<font color="red">CCF A</font>, <font color="blue">Acceptance rate: 19.9%</font>)
@@ -192,7 +195,7 @@ urchinTracker();
 
 <div id="footer">
 <div id="footer-text">
-Page generated 2021
+Page generated 2022
 
 </div>
 </div>
