--- a/publications.html
+++ b/publications.html
@@ -42,6 +42,13 @@ urchinTracker();
 <p>
 	<ol>
 	<li class="list-paper">
+		Towards Large-Scale Hybrid Edge Server Provision: An Online Mean Field Learning Approach <br>
+		<b>Zhiyuan Wang</b>, Jiancheng Ye*, and John C.S. Lui,	<br>
+		to appear in IEEE Journal on Selected Areas in Communications (JSAC), 2022<br>
+		(<font color="red">CCF A</font>)
+		</li>
+		
+	<li class="list-paper">
 		<a href="https://ieeexplore.ieee.org/document/9686361">Approximate and Deployable Shortest Remaining Processing Time Scheduler</a> <br>
 		<b>Zhiyuan Wang</b>, Jiancheng Ye*, Dong Lin, Yipei Chen, and John C.S. Lui,	<br>
 		to appear in IEEE/ACM Transactions on Networking (ToN), 2021<br>
