--- a/index.html
+++ b/index.html
@@ -104,13 +104,25 @@ urchinTracker();
 <h2>Recent News</h2>
 <p>
 
+
+
 <ul>
 <li> <font color="red"><b>New</b></font> 
-	<a>[2021.05]</a> 
-	The paper "An Online Mean Field Approach for Hybrid Edge Server Provision" is accepted by ACM MobiHoc 2021.
+	<a>[2022.04]</a> 
+	The paper "Towards Large-Scale Hybrid Edge Server Provision: An Online Mean Field Learning Approach" is accepted by IEEE JSAC 2022.
 	</li>
 <li> <font color="red"><b>New</b></font> 
-	<a>[2021.04]</a> 
+	<a>[2022.03]</a> 
+	The paper "Approximate and Deployable Shortest Remaining Processing Time Scheduler" is accepted by IEEE/ACM ToN 2022.
+	</li>	
+	
+<li> <a>[2021.12]</a> 
+	The paper "Socially-Optimal Mechanism Design for Incentivized Online Learning" is accepted by IEEE INFOCOM 2022.
+	</li>	
+<li> <a>[2021.05]</a> 
+	The paper "An Online Mean Field Approach for Hybrid Edge Server Provision" is accepted by ACM MobiHoc 2021.
+	</li>
+<li> <a>[2021.04]</a> 
 	The paper "Designing Approximate and Deployable SRPT Scheduler: A Unified Framework" is accepted by IEEE/ACM IWQoS 2021.
 	</li>
 <li> <a>[2020.12]</a> 
