--- a/publications.html
+++ b/publications.html
@@ -42,7 +42,7 @@ urchinTracker();
 <p>
 	<ol>
 	<li class="list-paper">
-		Towards Large-Scale Hybrid Edge Server Provision: An Online Mean Field Learning Approach <br>
+		<a href="https://ieeexplore.ieee.org/document/9791413">Towards Large-Scale Hybrid Edge Server Provision: An Online Mean Field Learning Approach</a> <br>
 		<b>Zhiyuan Wang</b>, Jiancheng Ye*, and John C.S. Lui,	<br>
 		to appear in IEEE Journal on Selected Areas in Communications (JSAC), 2022<br>
 		(<font color="red">CCF A</font>)
