--- a/publications.html
+++ b/publications.html
@@ -44,28 +44,28 @@ urchinTracker();
 	<li class="list-paper">
 		<a href="https://ieeexplore.ieee.org/document/9791413">Towards Large-Scale Hybrid Edge Server Provision: An Online Mean Field Learning Approach</a> <br>
 		<b>Zhiyuan Wang</b>, Jiancheng Ye*, and John C.S. Lui,	<br>
-		to appear in IEEE Journal on Selected Areas in Communications (JSAC), 2022<br>
+		IEEE Journal on Selected Areas in Communications (JSAC), 2022, DOI: 10.1109/JSAC.2022.3180781<br>
 		(<font color="red">CCF A</font>)
 		</li>
 		
 	<li class="list-paper">
 		<a href="https://ieeexplore.ieee.org/document/9686361">Approximate and Deployable Shortest Remaining Processing Time Scheduler</a> <br>
 		<b>Zhiyuan Wang</b>, Jiancheng Ye*, Dong Lin, Yipei Chen, and John C.S. Lui,	<br>
-		to appear in IEEE/ACM Transactions on Networking (ToN), 2021<br>
+		IEEE/ACM Transactions on Networking (ToN), 2022, DOI: 10.1109/TNET.2022.3142148<br>
 		(<font color="red">CCF A</font>)
 		</li>
 
 	<li class="list-paper">
 		<a href="https://ieeexplore.ieee.org/document/9201367">Monetizing Edge Service in Mobile Internet Ecosystem</a> <br>
 		<b>Zhiyuan Wang</b><sup>&dagger;</sup>, Lin Gao<sup>&dagger;</sup>, Tong Wang*, and Jingjing Luo,<br>
-		IEEE Transactions on Mobile Computing (TMC), vol. 21, no. 5, pp. 1751-1765, May 2022<br>
+		IEEE Transactions on Mobile Computing (TMC), 2022, 21(5): 1751-1765<br>
 		(<font color="red">CCF A</font>)
 		</li>
 		
 	<li class="list-paper">
 		<a href="https://ieeexplore.ieee.org/document/9161283">Location-Flexible Mobile Data Service in Overseas Market</a> <br>
 		<b>Zhiyuan Wang</b>, Lin Gao, and Jianwei Huang*,	<br>
-		IEEE Transactions on Mobile Computing (TMC), vol. 21, no. 2, pp. 629-643, February 2022<br>
+		IEEE Transactions on Mobile Computing (TMC), 2022, 21(2): 629-643<br>
 		(<font color="red">CCF A</font>)
 		</li>
 	
@@ -74,28 +74,28 @@ urchinTracker();
 	<li class="list-paper">
 		<a href="https://ieeexplore.ieee.org/abstract/document/8930821">Toward Flexible Wireless Data Services</a> <br>
 		<b>Zhiyuan Wang</b>, Lin Gao, Jianwei Huang*, and Biying Shou,<br>
-		IEEE Communication Magazine, vol. 57, no. 12, pp. 25-30, December 2019<br>
+		IEEE Communication Magazine, 2019, 57(12): 25-30<br>
 		(Impact Factor: 11.052)
 		</li>
 		
 	<li class="list-paper">
 		<a href="https://ieeexplore.ieee.org/document/8731760">Multi-Cap Optimization for Wireless Data Plans with Time Flexibility</a><br>
 		<b>Zhiyuan Wang</b>, Lin Gao, and  Jianwei Huang*,<br>
-		IEEE Transactions on Mobile Computing (TMC), vol. 19, no. 9, pp. 2145-2159, September 2020<br>
+		IEEE Transactions on Mobile Computing (TMC), 2020, 19(9): 2145-2159<br>
 		(<font color="red">CCF A</font>)
 		</li>
 									
 	<li class="list-paper">
 		<a href="https://ieeexplore.ieee.org/document/8685154">Duopoly Competition for Mobile Data Plans with Time Flexibility</a><br>
 		<b>Zhiyuan Wang</b>, Lin Gao, and  Jianwei Huang*<br>
-		IEEE Transactions on Mobile Computing  (TMC), vol. 19, no. 6, pp. 1286-1298, June 2020 <br>
+		IEEE Transactions on Mobile Computing  (TMC), 2020, 19(6): 1286-1298 <br>
 		(<font color="red">CCF A</font>)
 		</li>
 									
 	<li class="list-paper">
 		<a href="https://ieeexplore.ieee.org/document/8476229">Exploring Time Flexibility in Wireless Data Plans</a><br>
 		<b>Zhiyuan Wang</b>, Lin Gao, and  Jianwei Huang*<br>
-		IEEE Transactions on Mobile Computing (TMC), vol. 18, no. 9, pp. 2048-2061, September 2019 <br>
+		IEEE Transactions on Mobile Computing (TMC), 2019, 18(9): 2048-2061 <br>
 		(<font color="red">CCF A</font>)	
 		</li>
 	</ol>
