--- a/publications.html
+++ b/publications.html
@@ -51,7 +51,7 @@ urchinTracker();
 	<li class="list-paper">
 		<a href="https://ieeexplore.ieee.org/document/9686361">Approximate and Deployable Shortest Remaining Processing Time Scheduler</a> <br>
 		<b>Zhiyuan Wang</b>, Jiancheng Ye*, Dong Lin, Yipei Chen, and John C.S. Lui,	<br>
-		IEEE/ACM Transactions on Networking (ToN), 2022, DOI: 10.1109/TNET.2022.3142148<br>
+		IEEE/ACM Transactions on Networking (ToN), 2022, 30(3): 1368-1381<br>
 		(<font color="red">CCF A</font>)
 		</li>
 
@@ -110,7 +110,7 @@ urchinTracker();
 	<ol>
 
 	<li class="list-paper">
-		<a href="https://arxiv.org/abs/2112.14338">
+		<a href="https://ieeexplore.ieee.org/document/9796676">
 		Socially-Optimal Mechanism Design for Incentivized Online Learning </a><br>
 		<b>Zhiyuan Wang</b>, Lin Gao, and Jianwei Huang<br>		
 		IEEE International Conference on Computer Communications (INFOCOM),	Online, May 2022 <br>
